login & signup white space fix

--- a/public/styles/sass/_Login.scss
+++ b/public/styles/sass/_Login.scss
@@ -1,5 +1,5 @@
 .login-container {
-  min-height: 95vh;
+  min-height: 100vh;
   background: linear-gradient(-45deg, $orange 40%, $green 40%);
 
   p {
