--- a/public/styles/sass/_Signup.scss
+++ b/public/styles/sass/_Signup.scss
@@ -1,5 +1,5 @@
 .signup-container {
-  min-height: 95vh;
+  min-height: 100vh;
   background: linear-gradient(-45deg, $orange 40%, $green 40%);
 
   label,
